Set status to 'reading first line' after a closing header line.

Fix will also be in 4.3.4.

BUG: 212027

svn path=/trunk/KDE/kdeutils/ark/; revision=1044565